2004-02-11  Will Cohen  <wcohen@redhat.com>

	* utils/opcontrol: fix normalise_events for default event.

2004-02-10  Will Cohen  <wcohen@redhat.com>

	* events/i386/p6_mobile/events:
	* events/i386/p6_mobile/unit_masks:
	* events/Makefile.am:
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.c:
	* utils/op_help.c: Add support for Pentium M (Centrino).

2004-02-10  Philippe Elie  <phil.el@wanadoo.fr>

	* events/i386/p4/events: s/instructions/uops/ when appropriate
	* events/i386/p4/unit_masks: change many bitmask to mandatory,
	  fix invalid default value, remove mask only used with HyperThreading
	* events/i386/p4-ht/unit_masks: s/bitmask/mandatory. Remove unused
	  unit mask

	* libop/op_events.h:
	* libop/op_events.c: warn if an unit mask is not used (this add a
	  warning for Itanium2, added in TODO)

	* libop/op_parse_event.c: don't silently accept invalid value as zero
	  (e.g FOO:3000:0xx21 was accepted as FOO:3000:0x0)

	* utils/opcontrol: mandatory default value was rejected because we
	  checked the events before getting the default unit mask.

2004-02-08  Zwane Mwaikambo  <zwane@arm.linux.org.uk>

	* daemon/opd_cookie.c: Fix syscall base number.

2004-02-08  Zwane Mwaikambo  <zwane@arm.linux.org.uk>

	* daemon/opd_cookie.c: arm support for timer interrupt

2004-02-08  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/liblegacy/opd_sample_files.c: op_mangle_filename() presume
	  mangle_values::dep_name is never NULL, this fix a daemon segfault
	  with 2.4 kernel

2004-02-07  Philippe Elie  <phil.el@wanadoo.fr>

	* events/i386/p4/unit_masks:
	* events/i386/p4-ht/unit_masks: global_power_events need mandatory
	 unit mask

2004-02-07  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/arrange_profiles.cpp: re-order function to fix a build problem
	  with gcc 3.3.1

2004-02-05  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/callgraph_container.cpp: tweak computation of callee_counts

2004-02-05  Philippe Elie  <phil.el@wanadoo.fr>
