@@ -6,6 +6,8 @@ for some pointers and/or read HACKING and doc/CodingStyle.
 0.8 release
 -----------
 
+ o TRACE_END is no longer sent by the driver, keep it a bit for compatibility
+ o I don't receive any SIGALRM with 2.6.1 (phe)
  o  op_help --cpu-type=9 > /dev/null generate some warning (itanium2)
  o when using callgraph and a counter number != 0 is used we receive *non
   callgraph sample* with counter == 0 so daemon abort in opd_events.c
